--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,16 @@ services:
       - ./app:/app:cached
     working_dir: /app
     ports:
-      - "80:80"
+      - "8000:8000"
     environment:
       - PYTHONUNBUFFERED=1
+      - DB_URL=mongodb://db/mercadata
+    depends_on:
+      - db
+
+  db:
+    image: mongo
+    ports:
+      - 27017:27017
+    volumes:
+      - .data:/data/db
