--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,9 @@ services:
       - ./app:/app:cached
     working_dir: /app
     ports:
-      - "8000:8000"
+      - "80:8000"
+    expose:
+      - 80
     environment:
       - PYTHONUNBUFFERED=1
       - DB_URL=mongodb://db/mercadata
