--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,14 +11,4 @@ services:
     expose:
       - 80
     environment:
-      - PYTHONUNBUFFERED=1
-      - DB_URL=mongodb://db/mercadata
-    depends_on:
-      - db
-
-  db:
-    image: mongo
-    ports:
-      - 27017:27017
-    volumes:
-      - .data:/data/db
+      - DB_URL=DB_URL_MERCADATA
