--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
 services:
   app:
-    build: .
+    build:
+      context: ./app
+      dockerfile: Dockerfile
     tty: true
     container_name: app_py
     volumes:
