new mongo server

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-DB_URL_MERCADATA=mongodb+srv://np-user-db:dCCt3h0dLIEgQzlM@cluster0.sxld0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# DB_URL_MERCADATA=mongodb+srv://np-user-db:dCCt3h0dLIEgQzlM@cluster0.sxld0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+# DB_URL_MERCADATA=mongodb+srv://nikiponce:nAivSnRV4MvFLKz@cluster0.gkovy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URL_MERCADATA=mongodb+srv://p11-local-cloud.duckdns.org:27017/mercadata?retryWrites=true
