--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -2,7 +2,7 @@ services:
   app:
     build: .
     tty: true
-    container_name: app_py
+    container_name: mercadata_api
     volumes:
       - ./app:/app:cached
     working_dir: /app
@@ -10,8 +10,6 @@ services:
       - "9999:8000"
     env_file:
       - .env
-    environment:
-      - DB_URL_MERCADATA=${DB_URL_MERCADATA}
 
   mongodb:
     image: mongo:latest
@@ -21,3 +19,6 @@ services:
     volumes:
       - mongodb_data:/data/db
     restart: always
+
+volumes:
+  mongodb_data:
