--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-# DB_URL_MERCADATA=mongodb+srv://np-user-db:dCCt3h0dLIEgQzlM@cluster0.sxld0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
-# DB_URL_MERCADATA=mongodb+srv://nikiponce:nAivSnRV4MvFLKz@cluster0.gkovy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-DB_URL_MERCADATA=mongodb+srv://p11-local-cloud.duckdns.org:27017/mercadata?retryWrites=true
+DB_URL_MERCADATA=mongodb://mongodb:27017/mercadata
