Add port mapping for app service in docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     volumes:
       - ./app:/app:cached
     working_dir: /app
+    ports:
+      - "8000:8000"
     env_file:
       - .env
     environment:
